--- a/Calculator/App.xaml
+++ b/Calculator/App.xaml
@@ -4,6 +4,6 @@
              xmlns:local="clr-namespace:Calculator"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Image x:Key="AppIcon" Source="/ic.ico" />
     </Application.Resources>
 </Application>
