--- a/Calculator/MainWindow.xaml
+++ b/Calculator/MainWindow.xaml
@@ -4,8 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Calculator"
+        
         mc:Ignorable="d"
-        Title="Калькулятор" Height="350" Width="500" WindowStyle="ThreeDBorderWindow" ResizeMode="NoResize">
+        Title="Калькулятор" Height="440" Width="533" Icon="/icon.ico">
     <Grid x:Name="Calculator" Background="DarkGray">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
@@ -15,7 +16,8 @@
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="28*"></ColumnDefinition>
+            <ColumnDefinition Width="12*"></ColumnDefinition>
+            <ColumnDefinition Width="16*"/>
             <ColumnDefinition Width="97*"/>
             <ColumnDefinition Width="125*"></ColumnDefinition>
             <ColumnDefinition Width="125*"></ColumnDefinition>
@@ -25,210 +27,213 @@
 
 
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5"  x:Name="Text" FontSize="30" FontFamily="Courier New" FontWeight="Bold" Background="Azure" Margin="0,0,0,67" Grid.RowSpan="2"></TextBlock>
-        <Button Grid.Row="1" Width="90" Height="50" FontSize="30" Grid.ColumnSpan="2" Margin="18,8,17,9">
+        <Border BorderBrush="Black" BorderThickness="5" CornerRadius="10"  Grid.ColumnSpan="6" Background="Azure">
+            <TextBlock   x:Name="Text" FontSize="30" FontFamily="Courier New" FontWeight="Bold" Background="Azure"  ></TextBlock>
+        </Border>
+        <Button Grid.Row="1" Width="90" Height="50" FontSize="30" Grid.ColumnSpan="2" Margin="6,8,17,9" Grid.Column="1">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Border 
 CornerRadius="20" 
 Background="Orange"
-BorderBrush="{TemplateBinding BorderBrush}"
-BorderThickness="{TemplateBinding BorderThickness}">
+BorderBrush="black"
+BorderThickness="3">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
             </Button.Template> 1
         </Button>
-        <Button Grid.Row="1" Grid.Column="2" Width="90" Height="50" FontSize="30" Margin="17,8,18,9">
+        <Button Grid.Row="1" Grid.Column="3" Width="90" Height="50" FontSize="30" Margin="17,8,18,9">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Border 
                 CornerRadius="20" 
                 Background="Orange"
-                BorderBrush="{TemplateBinding BorderBrush}"
-                BorderThickness="{TemplateBinding BorderThickness}">
+                BorderBrush="black"
+                BorderThickness="3">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
             </Button.Template> 2
         </Button>
-        <Button Grid.Row="1" Grid.Column="3" Width="90" Height="50" FontSize="30" Margin="18,8,17,9">
+        <Button Grid.Row="1" Grid.Column="4" Width="90" Height="50" FontSize="30" Margin="18,8,17,9">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Border 
     CornerRadius="20" 
     Background="Orange"
-    BorderBrush="{TemplateBinding BorderBrush}"
-    BorderThickness="{TemplateBinding BorderThickness}">
+    BorderBrush="black"
+    BorderThickness="3">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
             </Button.Template> 3
         </Button>
-        <Button Grid.Row="2" Grid.Column="0" Width="90" Height="50" FontSize="30" Grid.ColumnSpan="2" Margin="18,8,17,8">
+        <Button Grid.Row="2" Grid.Column="1" Width="90" Height="50" FontSize="30" Grid.ColumnSpan="2" Margin="6,8,17,8">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Border 
 CornerRadius="20" 
 Background="Orange"
-BorderBrush="{TemplateBinding BorderBrush}"
-BorderThickness="{TemplateBinding BorderThickness}">
+BorderBrush="black"
+BorderThickness="3">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
             </Button.Template> 4
         </Button>
-        <Button Grid.Row="2" Grid.Column="2" Width="90" Height="50" FontSize="30" Margin="17,8,18,8">
+        <Button Grid.Row="2" Grid.Column="3" Width="90" Height="50" FontSize="30" Margin="17,8,18,8">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Border 
 CornerRadius="20" 
 Background="Orange"
-BorderBrush="{TemplateBinding BorderBrush}"
-BorderThickness="{TemplateBinding BorderThickness}">
+BorderBrush="black"
+BorderThickness="3">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
             </Button.Template> 5
         </Button>
-        <Button Grid.Row="2" Grid.Column="3" Width="90" Height="50" FontSize="30" Margin="18,8,17,8">
+        <Button Grid.Row="2" Grid.Column="4" Width="90" Height="50" FontSize="30" Margin="18,8,17,8">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Border 
 CornerRadius="20" 
 Background="Orange"
-BorderBrush="{TemplateBinding BorderBrush}"
-BorderThickness="{TemplateBinding BorderThickness}">
+BorderBrush="black"
+BorderThickness="3">
+
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
             </Button.Template> 6
         </Button>
-        <Button Grid.Row="3" Grid.Column="0" Width="90" Height="50" FontSize="30" Grid.ColumnSpan="2" Margin="18,9,17,8">
+        <Button Grid.Row="3" Grid.Column="1" Width="90" Height="50" FontSize="30" Grid.ColumnSpan="2" Margin="6,9,17,8">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Border 
 CornerRadius="20" 
 Background="Orange"
-BorderBrush="{TemplateBinding BorderBrush}"
-BorderThickness="{TemplateBinding BorderThickness}">
+BorderBrush="black"
+BorderThickness="3">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
             </Button.Template> 7
         </Button>
-        <Button Grid.Row="3" Grid.Column="2" Width="90" Height="50" FontSize="30" Margin="17,9,18,8">
+        <Button Grid.Row="3" Grid.Column="3" Width="90" Height="50" FontSize="30" Margin="17,9,18,8">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Border 
 CornerRadius="20" 
 Background="Orange"
-BorderBrush="{TemplateBinding BorderBrush}"
-BorderThickness="{TemplateBinding BorderThickness}">
+BorderBrush="black"
+BorderThickness="3">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
             </Button.Template> 8
         </Button>
-        <Button Grid.Row="3" Grid.Column="3" Width="90" Height="50" FontSize="30" Margin="18,9,17,8">
+        <Button Grid.Row="3" Grid.Column="4" Width="90" Height="50" FontSize="30" Margin="18,9,17,8">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Border 
 CornerRadius="20" 
 Background="Orange"
-BorderBrush="{TemplateBinding BorderBrush}"
-BorderThickness="{TemplateBinding BorderThickness}">
+BorderBrush="black"
+BorderThickness="3">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
             </Button.Template> 9
         </Button>
-        <Button Grid.Row="4" Grid.Column="0" Width="90" Height="50" FontSize="30" Grid.ColumnSpan="2" Margin="18,9,17,8">
+        <Button Grid.Row="4" Grid.Column="1" Width="90" Height="50" FontSize="30" Grid.ColumnSpan="2" Margin="6,9,17,8">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Border 
 CornerRadius="20" 
 Background="Orange"
-BorderBrush="{TemplateBinding BorderBrush}"
-BorderThickness="{TemplateBinding BorderThickness}">
+BorderBrush="black"
+BorderThickness="3">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
             </Button.Template> 0
         </Button>
-        <Button Grid.Row="4" Grid.Column="2" Width="90" Height="50" FontSize="30" Margin="17,9,18,8">
+        <Button Grid.Row="4" Grid.Column="3" Width="90" Height="50" FontSize="30" Margin="17,9,18,8">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Border 
 CornerRadius="20" 
 Background="Orange"
-BorderBrush="{TemplateBinding BorderBrush}"
-BorderThickness="{TemplateBinding BorderThickness}">
+BorderBrush="black"
+BorderThickness="3">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
             </Button.Template> /
         </Button>
-        <Button Grid.Row="4" Grid.Column="3" Width="90" Height="50" FontSize="30" Margin="18,9,17,8">
+        <Button Grid.Row="4" Grid.Column="4" Width="90" Height="50" FontSize="30" Margin="18,9,17,8">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Border 
 CornerRadius="20" 
 Background="Orange"
-BorderBrush="{TemplateBinding BorderBrush}"
-BorderThickness="{TemplateBinding BorderThickness}">
+BorderBrush="black" 
+BorderThickness="3">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
             </Button.Template> -
         </Button>
-        <Button Grid.Row="1" Grid.Column="4" FontSize="30" FontWeight="Bold" Margin="0,0,0,66" Grid.RowSpan="2">
+        <Button Grid.Row="1" Grid.Column="5" FontSize="30" FontWeight="Bold" Margin="10,20,0,10">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Border 
 CornerRadius="20" 
 Background="Orange"
-BorderBrush="{TemplateBinding BorderBrush}"
-BorderThickness="{TemplateBinding BorderThickness}">
+BorderBrush="black"
+BorderThickness="3">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
             </Button.Template> AC
         </Button>
-        <Button Grid.Row="2" Grid.Column="4" FontSize="30">
+        <Button Grid.Row="2" Grid.Column="5" FontSize="30" Margin="10,0,0,12" >
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Border 
 CornerRadius="20" 
 Background="Orange"
-BorderBrush="{TemplateBinding BorderBrush}"
-BorderThickness="{TemplateBinding BorderThickness}">
+BorderBrush="black"
+BorderThickness="3">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
             </Button.Template> +
         </Button>
-        <Button Grid.Row="2" Grid.Column="4" FontSize="30" Margin="0,66,0,0" Grid.RowSpan="2">
+        <Button Grid.Row="2" Grid.Column="5" FontSize="30" Grid.RowSpan="2" Margin="10,79,0,23">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Border 
 CornerRadius="20" 
 Background="Orange"
-BorderBrush="{TemplateBinding BorderBrush}"
-BorderThickness="{TemplateBinding BorderThickness}">
+BorderBrush="black"
+BorderThickness="3">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
             </Button.Template> *
         </Button>
-        <Button Grid.Row="3" Grid.Column="4" FontSize="30" Margin="0,67,0,0" Grid.RowSpan="2">
+        <Button Grid.Row="3" Grid.Column="5" FontSize="30" Margin="0,67,0,17" Grid.RowSpan="2">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Border 
 CornerRadius="20" 
 Background="Orange"
-BorderBrush="{TemplateBinding BorderBrush}"
-BorderThickness="{TemplateBinding BorderThickness}">
+BorderBrush="black"
+BorderThickness="3">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
